якори в разделе типография добавлен обертывающий контейнер внутри main  с фиксированной шириной

--- a/form-elements.html
+++ b/form-elements.html
@@ -72,11 +72,12 @@
                   </nav>
             </header>
             <main class="form-elements__main">
-                  <header class="form-elements__main-header">
-                        <h1 class="form-elements__header-headline">Элементы формы</h1>
-                        <p class="form-elements__header-subtitle">Формы — важная часть любого интерфейса.</p>
-                  </header>
-                  <!-- <section class="typography__tittle-style">
+                  <div class="form-elements__main-container">
+                        <header class="form-elements__main-header">
+                              <h1 class="form-elements__header-headline">Элементы формы</h1>
+                              <p class="form-elements__header-subtitle">Формы — важная часть любого интерфейса.</p>
+                        </header>
+                        <!-- <section class="typography__tittle-style">
                         <h2 class="visually-hidden">Заголовки</h2>
                         <table class="typography__tittle-style-table">
                               <caption class="typography__tittle-style-headline">Заголовки</caption>
@@ -165,6 +166,7 @@
                               </tr>
                         </table>
                   </section> -->
+                  </div>
             </main>
       </div>
 </body>
