начало разметки поля

--- a/form-elements.html
+++ b/form-elements.html
@@ -77,27 +77,62 @@
                               <h1 class="form-elements__header-headline">Элементы формы</h1>
                               <p class="form-elements__header-subtitle">Формы — важная часть любого интерфейса.</p>
                         </header>
-                        <!-- <section class="typography__tittle-style">
-                        <h2 class="visually-hidden">Заголовки</h2>
-                        <table class="typography__tittle-style-table">
-                              <caption class="typography__tittle-style-headline">Заголовки</caption>
-                              <tr class="typography__tittle-style-h1">
-                                    <td class="typography__tittle-style-name">H1</td>
-                                    <td class="typography__tittle-h1">Заголовок</td>
-                              </tr>
-                              <tr class="typography__tittle-style-h2">
-                                    <td class="typography__tittle-style-name">H2</td>
-                                    <td class="typography__tittle-h2">Заголовок второго уровня</td>
-                              </tr>
-                              <tr class="typography__tittle-style-h3">
-                                    <td class="typography__tittle-style-name">H3</td>
-                                    <td class="typography__tittle-h3"><span>Заголовок третьего уровня</span>
-                                          <span>Заголовок третьего уровня</span>
-                                    </td>
-                              </tr>
-                        </table>
-                  </section>
-                  <section class="typography__text-style">
+                        <section class="form-elements__field-style">
+                              <h2 class="visually-hidden">Поля</h2>
+                              <table class="form-elements__field-style-table">
+                                    <caption class="form-elements__field-style-headline">Поля</caption>
+                                    <tr class="form-elements__field-style-ordinary">
+                                          <td class="form-elements__field-style-name">Обычные</td>
+                                          <td class="form-elements__field-ordinary">
+                                                <div><label>Лейбл</label><input></div>
+                                          </td>
+                                          <td class="form-elements__field-ordinary">
+                                                <div><label>Лейбл</label><input></div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__field-style-ordinary">
+                                          <td class="form-elements__field-style-name">Успех</td>
+                                          <td class="form-elements__field-success">
+                                                <div><label>Лейбл</label><input>
+                                                      <div>Успешно</div>
+                                                </div>
+                                          </td>
+                                          <td class="form-elements__field-success">
+                                                <div><label>Лейбл</label><input>
+                                                      <div>Успешно</div>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__field-style-ordinary">
+                                          <td class="form-elements__field-style-name">Предупреждение</td>
+                                          <td class="form-elements__field-warning">
+                                                <div><label>Лейбл</label><input>
+                                                      <div>Предупреждение</div>
+                                                </div>
+                                          </td>
+                                          <td class="form-elements__field-warning">
+                                                <div><label>Лейбл</label><input>
+                                                      <div>Предупреждение</div>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__field-style-ordinary">
+                                          <td class="form-elements__field-style-name">Ошибка</td>
+                                          <td class="form-elements__field-error">
+                                                <div><label>Лейбл</label><input>
+                                                      <div>Ошибка</div>
+                                                </div>
+                                          </td>
+                                          <td class="form-elements__field-error">
+                                                <div><label>Лейбл</label><input>
+                                                      <div>Ошибка</div>
+                                                </div>
+                                          </td>
+                                    </tr>
+
+                              </table>
+                        </section>
+                        <!-- <section class="typography__text-style">
                         <h2 class="visually-hidden">Текст</h2>
                         <table class="typography__text-style-table">
                               <caption class="typography__text-style-headline">Текст</caption>
