--- a/form-elements.html
+++ b/form-elements.html
@@ -119,27 +119,43 @@
                                     </tr>
                                     <tr class="form-elements__field-style-warning">
                                           <td class="form-elements__field-style-name">Предупреждение</td>
-                                          <td class="form-elements__field-warning">
-                                                <div><label>Лейбл</label><input>
-                                                      <div>Предупреждение</div>
+                                          <td>
+                                                <div class="form-elements__field-warning">
+                                                      <label
+                                                            class="form-elements__field-warning-label">Лейбл</label><input
+                                                            class="form-elements__field-warning-input1" type="text"
+                                                            placeholder="Заглушка">
+                                                      <div class="form-elements__field-warning-text">Предупреждение
+                                                      </div>
+
                                                 </div>
                                           </td>
-                                          <td class="form-elements__field-warning">
-                                                <div><label>Лейбл</label><input>
-                                                      <div>Предупреждение</div>
+                                          <td>
+                                                <div class="form-elements__field-warning"><label
+                                                            class="form-elements__field-warning-label">Лейбл</label><input
+                                                            class="form-elements__field-warning-input2" type="text"
+                                                            placeholder="Заглушка">
+                                                      <div class="form-elements__field-warning-text">Предупреждение
+                                                      </div>
                                                 </div>
                                           </td>
                                     </tr>
                                     <tr class="form-elements__field-style-error">
                                           <td class="form-elements__field-style-name">Ошибка</td>
-                                          <td class="form-elements__field-error">
-                                                <div><label>Лейбл</label><input>
-                                                      <div>Ошибка</div>
+                                          <td>
+                                                <div class="form-elements__field-error"><label
+                                                            class="form-elements__field-error-label">Лейбл</label><input
+                                                            class="form-elements__field-error-input1" type="text"
+                                                            placeholder="Заглушка">
+                                                      <div class="form-elements__field-error-text">Ошибка</div>
                                                 </div>
                                           </td>
-                                          <td class="form-elements__field-error">
-                                                <div><label>Лейбл</label><input>
-                                                      <div>Ошибка</div>
+                                          <td>
+                                                <div class="form-elements__field-error"><label
+                                                            class="form-elements__field-error-label">Лейбл</label><input
+                                                            class="form-elements__field-error-input2" type="text"
+                                                            placeholder="Заглушка">
+                                                      <div class="form-elements__field-error-text">Ошибка</div>
                                                 </div>
                                           </td>
                                     </tr>
